scrollbar bug fix

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,6 @@ html {
 html,
 body,
 #root {
-  height: 100%;
   background-color: #382d72;
   font-family: "Circular Std", Courier, monospace;
 }
